...
        showsVerticalScrollIndicator: true,
      }}
    >
      <Text text={route.params.code} preset="heading" />
      <View style={themed($segments)}>
        <ModeButton
          label="Requires"
          selected={mode === "requires"}
          onPress={() => setMode("requires")}
        />
        <ModeButton
          label="Unlocks"
          selected={mode === "unlocks"}
...
